--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "videoplay",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.js"
-  },
-  "keywords": [
-    "javascript",
-    "backend"
-  ],
-  "author": "divyang dheer",
-  "license": "ISC"
+    "name": "videoplay",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    },
+    "keywords": [
+        "javascript",
+        "backend"
+    ],
+    "author": "divyang dheer",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^8.0.4"
+    }
 }
